test/ClangImporter/availability_custom_domains.code
// RUN: %empty-directory(%t)

// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -typecheck -verify \
// RUN:   -import-objc-header %S/Inputs/availability_domains_bridging_header.h \
// RUN:   -I %S/../Inputs/custom-modules/availability-domains \
// RUN:   -enable-experimental-feature CustomAvailability \
// RUN:   %s %S/Inputs/availability_custom_domains_other.code

// Re-test with the bridging header precompiled into a .pch.
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -emit-pch \
// RUN:   -o %t/bridging-header.pch %S/Inputs/availability_domains_bridging_header.h

// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -typecheck -verify \
// RUN:   -import-objc-header %t/bridging-header.pch \
// RUN:   -I %S/../Inputs/custom-modules/availability-domains \
// RUN:   -enable-experimental-feature CustomAvailability \
// RUN:   %s %S/Inputs/availability_custom_domains_other.code

// REQUIRES: language_feature_CustomAvailability

// https://github.com/languagelang/language/issues/80058
// UNSUPPORTED: OS=linux-android

import Oceans // re-exports Rivers

fn testClangDecls() {
  available_in_arctic() // expected-error {{'available_in_arctic()' is only available in Arctic}}
  unavailable_in_pacific() // expected-error {{'unavailable_in_pacific()' is unavailable}}
  available_in_colorado_river_delta() // expected-error {{'available_in_colorado_river_delta()' is only available in Pacific}}
  available_in_colorado() // expected-error {{'available_in_colorado()' is only available in Colorado}}
  available_in_baltic() // expected-error {{cannot find 'available_in_baltic' in scope}}
}

@available(BayBridge)
fn availableInBayBridge() { }

@available(BayBridge, unavailable)
fn unavailableInBayBridge() { } // expected-note {{'unavailableInBayBridge()' has been explicitly marked unavailable here}}

@available(Pacific)
fn availableInPacific() { }

@available(Colorado, unavailable)
fn unavailableInColorado() { } // expected-note {{'unavailableInColorado()' has been explicitly marked unavailable here}}

// The Seas module is only imported directly by the other source file.
@available(Baltic) // expected-error {{unrecognized platform name 'Baltic'}}
fn availableInBaltic() { } // expected-note {{did you mean 'availableInBaltic'}}

fn testCodiraDecls() {
  availableInBayBridge() // expected-error {{'availableInBayBridge()' is only available in BayBridge}}
  unavailableInBayBridge() // expected-error {{'unavailableInBayBridge()' is unavailable}}
  availableInArctic()
  availableInPacific() // expected-error {{'availableInPacific()' is only available in Pacific}}
  unavailableInColorado() // expected-error {{'unavailableInColorado()' is unavailable}}
  availableInBaltic()
  availableInMediterranean() // expected-error {{'availableInMediterranean()' is only available in Mediterranean}}
}
